update weatherpy and add weather_data figures

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c6059e0a",
+   "id": "ab9c1933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ca82157e",
+   "id": "acca4df0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aefd1377",
+   "id": "9a53dc24",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6f545be0",
+   "id": "7cc12406",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "182376f6",
+   "id": "bab71182",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0db010a6",
+   "id": "5bee355d",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "528c3400",
+   "id": "fcef6662",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "de7097d5",
+   "id": "2cf4d994",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c5a4e86d",
+   "id": "8a459932",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9acf2333",
+   "id": "40ead224",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "015ee590",
+   "id": "4a7555e9",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9bdb0952",
+   "id": "821931fc",
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1c32e644",
+   "id": "cfa81f59",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "aff636ad",
+   "id": "b8620fac",
    "metadata": {},
    "outputs": [
     {
@@ -440,8 +440,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "ae0f14be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1643162582.565213"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds.\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "862eb665",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'01/25/22'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4d2e2786",
+   "id": "8f8681b8",
    "metadata": {},
    "outputs": [],
    "source": []
