--- a/vacationpy.ipynb
+++ b/vacationpy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dbb41eae",
+   "id": "08e81cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1b8b2686",
+   "id": "e1fa6f90",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e17a329a",
+   "id": "f67a3c7f",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9e4a68c6",
+   "id": "2a0d4671",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "7303eff4",
+   "id": "f5043753",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "fdd1e7ab",
+   "id": "cdf13ef8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c8922769",
+   "id": "3a33e32d",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5f4bd7ff",
+   "id": "cac600b4",
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "aed09b8c",
+   "id": "1842a38b",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3f638656",
+   "id": "649471ff",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f17d34c8",
+   "id": "089fa5e0",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "60f87109",
+   "id": "dae65969",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3dfe6f13",
+   "id": "450ef126",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "849d3c97",
+   "id": "d84b3cfe",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a1ddf065",
+   "id": "52d09b8b",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "86bb0de6",
+   "id": "9e4ec23d",
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c96675a3",
+   "id": "ddb0ab0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cb1e700f",
+   "id": "7a05dc45",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "90aad0d6",
+   "id": "5b317197",
    "metadata": {},
    "outputs": [
     {
@@ -1118,11 +1118,11 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "0ce40db2",
+   "id": "b0fcd519",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pop-up markers\n",
+    "#Pop-up marker formatting\n",
     "info_box_template = \"\"\"\n",
     "<dl>\n",
     "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f80dfd31",
+   "id": "19936bcf",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e564d0",
+   "id": "f791e8c4",
    "metadata": {},
    "outputs": [],
    "source": []
