--- a/weather_database/weather_database.ipynb
+++ b/weather_database/weather_database.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create 2000 random lat/longs\n"
+    "#Create 2000 random lat/longs\n"
    ]
   },
   {
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get nearest city numpy"
+    "#Get nearest city with citipy"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "#Add the data to a new DataFrame.\n",
-    "#Before exporting your new DataFrame as a CSV file, confirm:"
+    "#Export new DataFrame as a CSV file to weatherpy_database.csv"
    ]
   }
  ],
@@ -75,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
