--- a/vacation_search/vacation_search.ipynb
+++ b/vacation_search/vacation_search.ipynb
@@ -42,7 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n"
+    "# 2. Prompt the user to enter minimum and maximum temperature criteria \n",
+    "min_temp = float(input(\"What is the minimum temperature you would like for your trip? \"))\n",
+    "max_temp = float(input(\"What is the maximum temperature you would like for your trip? \"))\n"
    ]
   },
   {
@@ -51,7 +53,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n"
+    "# 3. Filter the city_data_df DataFrame using the input statements to create a new DataFrame using the loc method.\n",
+    "# Filter the dataset to find the cities that fit the criteria.\n",
+    "preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \\\n",
+    "                                       (city_data_df[\"Max Temp\"] >= min_temp)]\n",
+    "preferred_cities_df.head(10)"
    ]
   },
   {
@@ -60,7 +66,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4a. Determine if there are any empty rows.\n"
+    "# 4a. Determine if there are any empty rows.\n",
+    "preferred_cities_df.count()"
    ]
   },
   {
@@ -111,7 +118,28 @@
     "   \n",
     "    \n",
     "    # 6f. Get the first hotel from the results and store the name, if a hotel isn't found skip the city.\n",
+    "\n",
+    "# 6b. Iterate through the hotel DataFrame.\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    # 6c. Get latitude and longitude from DataFrame.\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lng = row[\"Lng\"]\n",
+    "\n",
+    "    # Add the latitude and longitude to location key for the params dictionary.\n",
+    "    params[\"location\"] = f\"{lat},{lng}\"\n",
+    "\n",
+    "    # 6d. Set up the base URL for the Google Directions API to get JSON data.\n",
+    "    # Use the search term: \"lodging\" and our latitude and longitude.\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "    # 6e. Make request and retrieve the JSON data from the search.\n",
+    "    hotels = requests.get(base_url, params=params).json()\n",
+    "# 6f. Get the first hotel from the results and store the name, if a hotel isn't found skip.\n",
+    "    try:\n",
+    "      hotel_df.loc[index, \"Hotel Name\"] = hotels[\"results\"][0][\"name\"]\n",
+    "    except (IndexError):\n",
+    "      print(\"Hotel not found... skipping.\")\n",
     "    \n",
+    "hotel_df.head(10) \n",
     "        "
    ]
   },
@@ -131,9 +159,9 @@
    "outputs": [],
    "source": [
     "# 8a. Create the output File (CSV)\n",
-    "\n",
+    "output_data_file = \"vacation_search/weatherpy_vacation.csv\"\n",
     "# 8b. Export the City_Data into a csv\n",
-    "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")"
+    "clean_hotel_df.to_csv(output_data_file, index_label=\"City_ID\")\n"
    ]
   },
   {
@@ -144,7 +172,12 @@
    "source": [
     "# 9. Using the template add city name, the country code, the weather description and maximum temperature for the city.\n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name}</dd>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{WxDescription} and {Max Temp} °F</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
@@ -161,8 +194,17 @@
    "outputs": [],
    "source": [
     "# 11a. Add a marker layer for each city to the map. \n",
+    "locations = hotel_df[[\"Lat\", \"Lng\"]]\n",
+    "max_temp = hotel_df[\"Max Temp\"]\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp,dissipating=False,\n",
+    "             max_intensity=300, point_radius=4)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "# 11b. Display the figure\n",
+    "fig"
    ]
   },
   {
@@ -170,7 +212,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save map figure to .png file\n",
+    "output_figure_file = \"vacation_search/weatherpy_vacation_map.png\"\n",
+    "fig.savefig(output_figure_file)"
+   ]
   },
   {
    "cell_type": "code",
@@ -196,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
