--- a/weather_database/weather_database.ipynb
+++ b/weather_database/weather_database.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4d38b42c",
+   "execution_count": 12,
+   "id": "b65a7450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "4ac51517",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x12596b320>"
+       "<zip at 0x125e6afa0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "88c4cadd",
+   "execution_count": 14,
+   "id": "a5bb34c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "de619be2",
+   "id": "d68e8b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7f7ecc47",
+   "id": "65ba2618",
    "metadata": {},
    "outputs": [
     {
@@ -2486,6 +2486,7 @@
     "        city_clouds = city_weather[\"clouds\"][\"all\"]\n",
     "        city_wind = city_weather[\"wind\"][\"speed\"]\n",
     "        city_country = city_weather[\"sys\"][\"country\"]\n",
+    "        city_wx = city_weather[\"weather\"][\"id\"]\n",
     "        \n",
     "        # Convert the date to ISO standard.\n",
     "        city_date = datetime.utcfromtimestamp(city_weather[\"dt\"]).strftime('%Y-%m-%d %H:%M:%S')\n",
@@ -2498,6 +2499,7 @@
     "                          \"Cloudiness\": city_clouds,\n",
     "                          \"Wind Speed\": city_wind,\n",
     "                          \"Country\": city_country,\n",
+    "                          \"Weather ID\": city_wx,\n",
     "                          \"Date\": city_date})\n",
     "\n",
     "# If an error is experienced, skip the city.\n",
@@ -2513,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "1f297199",
    "metadata": {},
    "outputs": [
@@ -2700,7 +2702,7 @@
        "9        2.21      BR  2022-01-26 23:17:58  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2713,8 +2715,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0555ac41",
+   "execution_count": 16,
+   "id": "edbc7c46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2729,7 +2731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1d62f01",
+   "id": "1e4f23d5",
    "metadata": {},
    "outputs": [],
    "source": []
